crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__all_samples@try_catch.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/try_catch.pcode
---
Ok:
  actions:
    - ConstantPool:
        - " -- try catch finally -- "
        - try!
        - message
        - Hello World!
        - catch!
        - e
        - finally!
        - " -- try catch -- "
        - test
        - "caught something! "
        - " -- try catch(MovieClip) finally -- "
        - this
        - MovieClip
        - " -- try catch(MovieClip) catch(Number) --"
        - catch something of MovieClip!
        - Number
        - catch something of Number!
        - catch anything else!
        - " -- try finally -- "
        - "If you see this, it didn\\'t throw! :("
    - Push:
        - Constant: 0
    - Trace
    - Try:
        try_body:
          actions:
            - Push:
                - Constant: 1
            - Trace
            - Push:
                - Constant: 2
            - Push:
                - Constant: 3
            - DefineLocal
            - Push:
                - Constant: 2
            - GetVariable
            - Throw
          label_positions: {}
        catch_body:
          - Variable: e
          - actions:
              - Push:
                  - Constant: 4
              - Trace
              - Push:
                  - Constant: 5
              - GetVariable
              - Trace
            label_positions: {}
        finally_body:
          actions:
            - Push:
                - Constant: 6
            - Trace
          label_positions: {}
    - Push:
        - Constant: 7
    - Trace
    - Try:
        try_body:
          actions:
            - Push:
                - Constant: 1
            - Trace
            - Push:
                - Constant: 8
            - Throw
          label_positions: {}
        catch_body:
          - Variable: e
          - actions:
              - Push:
                  - Constant: 9
              - Push:
                  - Constant: 5
              - GetVariable
              - Add2
              - Trace
            label_positions: {}
        finally_body: ~
    - Push:
        - Constant: 10
    - Trace
    - Try:
        try_body:
          actions:
            - Push:
                - Constant: 1
            - Trace
            - Push:
                - Constant: 11
            - GetVariable
            - Throw
          label_positions: {}
        catch_body:
          - Register: 0
          - actions:
              - Push:
                  - Constant: 12
              - GetVariable
              - Push:
                  - Register: 0
              - CastOp
              - PushDuplicate
              - Push:
                  - "Null"
              - Equals2
              - If: loc0217
              - Push:
                  - Constant: 5
              - StackSwap
              - DefineLocal
              - Push:
                  - Constant: 9
              - Push:
                  - Constant: 5
              - GetVariable
              - Add2
              - Trace
              - Jump: loc021e
              - Pop
              - Push:
                  - Register: 0
              - Throw
            label_positions:
              loc0217: 17
        finally_body:
          actions:
            - Push:
                - Constant: 6
            - Trace
          label_positions:
            loc021e: 0
    - Push:
        - Constant: 13
    - Trace
    - Try:
        try_body:
          actions:
            - Push:
                - Constant: 1
            - Trace
            - Push:
                - Constant: 11
            - GetVariable
            - Throw
          label_positions: {}
        catch_body:
          - Register: 0
          - actions:
              - Push:
                  - Constant: 12
              - GetVariable
              - Push:
                  - Register: 0
              - CastOp
              - PushDuplicate
              - Push:
                  - "Null"
              - Equals2
              - If: loc026b
              - Push:
                  - Constant: 5
              - StackSwap
              - DefineLocal
              - Push:
                  - Constant: 14
              - Trace
              - Jump: loc02ad
              - Pop
              - Push:
                  - Constant: 15
              - GetVariable
              - Push:
                  - Register: 0
              - CastOp
              - PushDuplicate
              - Push:
                  - "Null"
              - Equals2
              - If: loc0295
              - Push:
                  - Constant: 5
              - StackSwap
              - DefineLocal
              - Push:
                  - Constant: 16
              - Trace
              - Jump: loc02ad
              - Pop
              - Push:
                  - Register: 0
              - Push:
                  - Constant: 5
              - StackSwap
              - DefineLocal
              - Push:
                  - Constant: 17
              - Trace
              - Jump: loc02ad
            label_positions:
              loc026b: 14
              loc0295: 29
        finally_body: ~
    - Push:
        - Constant: 18
    - Trace
    - Try:
        try_body:
          actions:
            - Push:
                - Constant: 1
            - Trace
            - Push:
                - "Null"
            - Throw
          label_positions: {}
        catch_body: ~
        finally_body:
          actions:
            - Push:
                - Constant: 6
            - Trace
          label_positions: {}
    - Push:
        - Constant: 19
    - Trace
  label_positions:
    loc02ad: 13
