crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__all_samples@with.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/with.pcode
---
Ok:
  actions:
    - ConstantPool:
        - foo
        - createEmptyMovieClip
        - ""
        - _name
    - Push:
        - Integer: 1
    - Push:
        - Constant: 0
    - Push:
        - Integer: 2
    - Push:
        - Constant: 1
    - CallFunction
    - Pop
    - Push:
        - Constant: 2
    - Push:
        - Integer: 13
    - GetProperty
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - With:
        actions:
          - Push:
              - Constant: 3
          - GetVariable
          - Trace
        label_positions: {}
    - Push:
        - Constant: 0
    - GetVariable
    - With:
        actions:
          - Push:
              - Constant: 3
          - GetVariable
          - Trace
        label_positions: {}
  label_positions: {}
