crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__printed@legacy_operators.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/legacy_operators.pcode
---
ConstantPool "a", "b"
Push constant0
GetVariable
Push constant1
GetVariable
StringEquals
Trace
Push constant0
GetVariable
Push constant1
GetVariable
StringGreater
Trace
Push constant0
GetVariable
Push constant1
GetVariable
StringLess
Not
Trace
Push constant0
GetVariable
Push constant1
GetVariable
StringLess
Trace
Push constant0
GetVariable
Push constant1
GetVariable
StringGreater
Not
Trace
Push constant0
GetVariable
Push constant1
GetVariable
StringEquals
Not
Trace
Push constant0
GetVariable
Push constant1
GetVariable
And
Trace
Push constant0
GetVariable
Not
Trace
Push constant0
GetVariable
Push constant1
GetVariable
Or
Trace
Push constant0
GetVariable
Push constant1
GetVariable
StringAdd
Trace
